--- a/exercise2/index.html
+++ b/exercise2/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
     <p style="font-family: 'Times New Roman'; font-size: 16pt;">
-        Hello everyone, my name is [Your Name]
+        Hello everyone, my name is OOI XIN EN
     </p>
 </body>
 </html>
